feat: 更新项目启动文档

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -11,13 +11,12 @@ permalink: /pages/10bfa7/
 修改win系统上面的hosts(<font color="red">如有需要，请自行更换IP，比如说使用云服务，请更换成云服务器IP</font>)【目录位置：<font color="red">C:\Windows\System32\drivers\etc\hosts</font>】
 
 ```shell
-127.0.0.1 rocketmq-namesrv
+127.0.0.1 kafka
 127.0.0.1 redis
 127.0.0.1 postgresql
 127.0.0.1 nginx
 127.0.0.1 elasticsearch
 127.0.0.1 nacos
-127.0.0.1 kafka
 127.0.0.1 gateway
 127.0.0.1 tdengine
 127.0.0.1 job
@@ -27,8 +26,9 @@ permalink: /pages/10bfa7/
 127.0.0.1 otel-collector
 127.0.0.1 ui
 127.0.0.1 iot
-127.0.0.1 seata
 127.0.0.1 loki
+127.0.0.1 jaeger-query
+127.0.0.1 pulsar
 ```
 
 [window安装docker教程](https://kcloud.blog.csdn.net/article/details/123039609)
@@ -61,7 +61,7 @@ services:
     networks:
       - iot_network
   redis:
-    image: redis:7.4.2
+    image: redis:8.0.1
     container_name: redis
     # 保持容器在没有守护程序的情况下运行
     tty: true
@@ -77,62 +77,89 @@ services:
       - TZ=Asia/Shanghai
     networks:
       - iot_network
-  rocketmq-namesrv:
-    image: apache/rocketmq:5.3.1
-    container_name: rocketmq-namesrv
-    # 保持容器在没有守护程序的情况下运行
+  kafka:
+    image: bitnami/kafka:4.0.0
+    container_name: kafka
     tty: true
+    ports:
+      - '9092:9092'
+      - '9093:9093'
+    environment:
+      # 节点ID
+      - KAFKA_BROKER_ID=1
+      # 允许使用kraft，即Kafka替代Zookeeper
+      - KAFKA_ENABLE_KRAFT=yes
+      # kafka角色，做broker，也要做controller
+      - KAFKA_CFG_PROCESS_ROLES=broker,controller
+      # 指定供外部使用的控制类请求信息
+      - KAFKA_CFG_CONTROLLER_LISTENER_NAMES=CONTROLLER
+      # 定义安全协议
+      - KAFKA_CFG_LISTENER_SECURITY_PROTOCOL_MAP=CONTROLLER:PLAINTEXT,PLAINTEXT:PLAINTEXT
+      # 定义kafka服务端socket监听端口
+      - KAFKA_CFG_LISTENERS=PLAINTEXT://:9092,CONTROLLER://:9093
+      # 外网访问地址
+      - KAFKA_CFG_ADVERTISED_LISTENERS=PLAINTEXT://kafka:9092
+      # 允许使用PLAINTEXT监听器，默认false，不建议在生产环境使用
+      - ALLOW_PLAINTEXT_LISTENER=yes
+      # 设置broker最大内存，和初始内存
+      - KAFKA_HEAP_OPTS=-Xmx512M -Xms512M
+      # 集群地址
+      - KAFKA_CFG_CONTROLLER_QUORUM_VOTERS=1@kafka:9093
+      # 节点ID
+      - KAFKA_CFG_NODE_ID=1
     restart: always
     privileged: true
-    ports:
-      - "9876:9876"
-    command: sh mqnamesrv
-    environment:
-      - JAVA_OPT_EXT=-server -Xmx512m -Xms512m -Xmn256m
-      - TZ=Asia/Shanghai
     networks:
       - iot_network
-  rocketmq-broker:
-    image: apache/rocketmq:5.3.1
-    container_name: rocketmq-broker
+  # bin/pulsar-admin tenants create laokou
+  # bin/pulsar-admin namespaces create laokou/mqtt
+  # bin/pulsar-admin topics create-partitioned-topic laokou/mqtt/up-property-report -p 4
+  # bin/pulsar-admin topics create-partitioned-topic laokou/mqtt/down-property-read -p 4
+  # bin/pulsar-admin topics create-partitioned-topic laokou/mqtt/up-property-read-reply -p 4
+  # bin/pulsar-admin topics create-partitioned-topic laokou/mqtt/down-property-write -p 4
+  # bin/pulsar-admin topics create-partitioned-topic laokou/mqtt/up-property-write-reply -p 4
+  pulsar:
+    image: apachepulsar/pulsar:4.0.5
+    container_name: pulsar
     # 保持容器在没有守护程序的情况下运行
     tty: true
     restart: always
     privileged: true
-    ports:
-      - "10909:10909"
-      - "10911:10911"
-      - "10912:10912"
-    # 自动创建主题
-    command: sh mqbroker -n rocketmq-namesrv:9876 -c /home/rocketmq/conf/broker.conf autoCreateTopicEnable=true
+    command: bin/pulsar standalone
     environment:
-      - JAVA_OPT_EXT=-server -Xmx512m -Xms512m -Xmn256m
-      - TZ=Asia/Shanghai
+      - PULSAR_MEM=-Xms512m -Xmx512m
+    ports:
+      - "6650:6650"
+      - "8080:8080"
     volumes:
-      - ./rocketmq5/broker/conf/broker.conf:/home/rocketmq/conf/broker.conf
-      # 挂载数据
-      - ./rocketmq5/broker/store:/home/rocketmq/store
-      # 挂载日志
-      - ./rocketmq5/broker/logs:/home/rocketmq/logs
+      - ./pulsar/data:/pulsar/data
     networks:
       - iot_network
-    depends_on:
-      - rocketmq-namesrv
-  # 默认账号/密码 => admin/admin
+  zookeeper:
+    image: bitnami/zookeeper:3.9.3
+    container_name: zookeeper
+    tty: true
+    ports:
+      - '2181:2181'
+    environment:
+      # 允许匿名登录
+      - ALLOW_ANONYMOUS_LOGIN=yes
+    restart: always
+    privileged: true
+    networks:
+      - iot_network
   portainer:
-   image: portainer/portainer-ce:latest
-   container_name: portainer
-   # 保持容器在没有守护程序的情况下运行
-   tty: true
-   restart: always
-   privileged: true
-   ports:
-     - "9010:9000"
-   volumes:
-     - /var/run/docker.sock:/var/run/docker.sock
-     - ./portainer/data:/data
-   networks:
-     - iot_network
+    image: portainer/portainer-ce:latest
+    container_name: portainer
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    ports:
+      - "9010:9000"
+    volumes:
+      - /var/run/docker.sock:/var/run/docker.sock
+      - ./portainer/data:/data
 networks:
   iot_network:
     driver: bridge
@@ -145,12 +172,6 @@ networks:
 chmod -R 7777 目录
 ```
 
-<div style="width: 100%"><img src="/img/项目启动【dev环境】/img.png"></div>
-
-注意：<font color="red">需要修改rocketmq的broker.conf配置，将brokerIP1改为自己的本地IP</font>
-
-<div style="width: 100%"><img src="/img/项目启动【dev环境】/img_1.png"></div>
-
 ```shell
 # 启动服务
 docker-compose up - d
@@ -158,11 +179,15 @@ docker-compose up - d
 
 访问【docker可视化界面】http://localhost:9010
 
+注意：<font color="red">图片仅供参考，以实际目录为准</font>
+
 <img src="/img/项目启动【dev环境】/img_13.png">
 
 <img src="/img/项目启动【dev环境】/img_14.png">
 
 ## 视频地址
+
+注意：<font color="red">视频仅供参考，以实际项目为准</font>
 
 [老寇云平台-项目演示视频](https://www.bilibili.com/video/BV16M411C7v7)
 
@@ -186,7 +211,6 @@ docker-compose up - d
 </mirrons>
 ```
 
-
 🚀 软件版本
 <table>
     <tr>
@@ -208,10 +232,6 @@ docker-compose up - d
     <tr>
         <td>Redis</td>
         <td>7.2.4</td>
-    </tr>
-    <tr>
-        <td>RocketMQ</td>
-        <td>5.3.1</td>
     </tr>
 </table>
 
@@ -247,6 +267,8 @@ mvn clean install -P dev -DskipTests
 - kcloud_platform_nacos.sql 【Nacos】
 - kcloud_platform_generator.sql 【代码生成】
 
+注意：<font color="red">图片仅供参考，以实际目录为准</font>
+
 <img src="/img/项目启动【dev环境】/img_2.png">
 
 注意：<font color="red">不同的数据库执行不同的SQL文件 </font>
@@ -258,6 +280,8 @@ mvn clean install -P dev -DskipTests
 🚀 修改pom.xml配置，修改数据库连接信息，其他信息默认即可
 
 注意：<font color="red">先跑起来，不要改任何的密码，请不要擅作主张的修改，如果照着教程运行，还有问题请联系作者</font>
+
+注意：<font color="red">图片仅供参考，以实际目录为准</font>
 
 <img src="/img/项目启动【dev环境】/img_3.png">
 
@@ -280,7 +304,9 @@ mvn clean install -P dev -DskipTests
 
 <img src="/img/项目启动【dev环境】/img_7.png">
 
-🚀 先运行laokou-auth、然后laokou-gateway、最后laokou-admin【有先后顺序，请按照步骤】
+🚀 运行laokou-oss、laokou-distributed-identifier、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】
+
+注意：<font color="red">图片仅供参考，以实际目录为准</font>
 
 <img src="/img/项目启动【dev环境】/img_8.png">
 
