--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -204,9 +204,9 @@ docker-compose up - d
 ```xml
 <mirrors>
 	<mirror>
-	<id>nexus</id>
-	<mirrorOf>*,!spring-milestone,!spring-snapshots,!spring-release</mirrorOf>
-	<url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
+		<id>nexus</id>
+		<mirrorOf>*,!spring-milestones,!spring-snapshots</mirrorOf>
+		<url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
 	</mirror>
 </mirrons>
 ```
