feat: 移除seata配置，修改nacos配置，增加sentinel配置，增加sentinel模块，集成sentinel，去掉resilience4j

--- a/README.adoc
+++ b/README.adoc
@@ -173,7 +173,7 @@ image::doc/image/老寇IoT云平台业务架构图.png[架构图,align=center]
 - 远程调用：Dubbo
 - 客户端请求：OkHttp & HttpClient & WebClient & RestClient
 - 负载均衡：Spring Cloud Loadbalancer
-- 服务熔断&降级&限流：Resilience4j
+- 服务熔断&降级&限流：Sentinel
 - 分库分表：Mybatis Plus
 - 消息队列：Kafka & Pulsar
 - 服务监控：Spring Boot Admin & Prometheus
