--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -29,6 +29,7 @@ permalink: /pages/10bfa7/
 127.0.0.1 loki
 127.0.0.1 jaeger-query
 127.0.0.1 pulsar
+127.0.0.1 sentinel
 ```
 
 [window安装docker教程](https://kcloud.blog.csdn.net/article/details/123039609)
@@ -148,6 +149,22 @@ services:
     privileged: true
     networks:
       - iot_network
+  # https://github.com/KouShenhai/Sentinel
+  sentinel-dashboard:
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/sentinel-dashboard:3.5.4
+    container_name: sentinel-dashboard
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    ports:
+      - "8972:8972"
+    volumes:
+      - ./sentinel/logs:/opt/logs/csp
+    env_file:
+      - env/sentinel.env
+    networks:
+      - iot_network
   portainer:
     image: portainer/portainer-ce:latest
     container_name: portainer
@@ -160,6 +177,8 @@ services:
     volumes:
       - /var/run/docker.sock:/var/run/docker.sock
       - ./portainer/data:/data
+    networks:
+      - iot_network
 networks:
   iot_network:
     driver: bridge
