--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -26,6 +26,8 @@ permalink: /pages/b04951/
 
 🚀 重构oss上传文件【本地/亚马逊S3】，独立服务，基于Dubbo调用
 
+🚀 还原Resilience4j为Sentinel，基于docker部署，方便启动和管理
+
 #### 3.5.1更新日志
 
 ###### 版本
