feat: 修改启动文档，增加sentinel.env配置，auth初始化访问security上下文为空，导致无法获取用户信息

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -184,6 +184,23 @@ networks:
     driver: bridge
 ```
 
+增加sentinel.env配置
+
+<font color="red">请注意sentinel路径</font>
+
+<font color="red">请注意sentinel路径</font>
+
+<font color="red">请注意sentinel路径</font>
+
+```shell
+AUTH_USERNAME=sentinel
+AUTH_PASSWORD=laokou123
+VERSION=3.5.4
+PROFILE=dev
+SERVER_PORT=8972
+JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseG1GC -Duser.timezone=GMT+08"
+```
+
 注意：<font color="red">复制到指定目录，然后启动服务【需要授权】</font>
 
 ```shell
