feat: 提交docker配置，更新docker镜像版本

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -19,7 +19,7 @@ permalink: /pages/10bfa7/
 127.0.0.1 nacos
 127.0.0.1 gateway
 127.0.0.1 tdengine
-127.0.0.1 job
+127.0.0.1 snail-job
 127.0.0.1 auth
 127.0.0.1 admin
 127.0.0.1 jaeger-collector
@@ -150,6 +150,7 @@ services:
     networks:
       - iot_network
   # https://github.com/KouShenhai/Sentinel
+  # 账号/密码 => sentinel/laokou123
   sentinel-dashboard:
     image: registry.cn-shenzhen.aliyuncs.com/koushenhai/sentinel-dashboard:3.5.4
     container_name: sentinel-dashboard
