docs: 修改项目文档

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -236,7 +236,7 @@ docker-compose up - d
 
 注意：<font color="red">Maven 版本请使用3.9.x</font>
 
-<font color="red">注意：需要配置Maven setting.xml</font>
+<font color="red">注意：项目里面已经配置，如果还是下载不了依赖，可以尝试配置Maven setting.xml</font>
 
 ```xml
 <mirrors>
@@ -322,7 +322,7 @@ mvn clean install -P dev -DskipTests
 
 <img src="/img/项目启动【dev环境】/img_3.png">
 
-🚀 运行laokou-nacos，启动单机Nacos（需要配置VM Option）
+🚀 运行laokou-nacos，启动单机Nacos（需要配置VM Option）【运行好了，不要关闭nacos】
 
 <img src="/img/项目启动【dev环境】/img_4.png">
 
@@ -330,7 +330,7 @@ mvn clean install -P dev -DskipTests
 -Xmx512m
 -Xms512m
 -Dnacos.standalone=true
--Dnacos.home=./logs/nacos
+-Dcom.google.protobuf.use_unsafe_pre22_gencode
 ```
 
 <img src="/img/项目启动【dev环境】/img_5.png">
@@ -341,7 +341,11 @@ mvn clean install -P dev -DskipTests
 
 <img src="/img/项目启动【dev环境】/img_7.png">
 
-🚀 运行laokou-oss、laokou-distributed-identifier、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】
+🚀 <font color="red">注意：请运行laokou-nacos、laokou-oss、laokou-distributed-identifier、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+
+🚀 <font color="red">注意：请运行laokou-nacos、laokou-oss、laokou-distributed-identifier、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
+
+🚀 <font color="red">注意：请运行laokou-nacos、laokou-oss、laokou-distributed-identifier、laokou-auth、laokou-gateway、laokou-admin【有先后顺序，请按照步骤】</font>
 
 注意：<font color="red">图片仅供参考，以实际目录为准</font>
 
