docs: 修改项目文档

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -30,6 +30,7 @@ permalink: /pages/10bfa7/
 127.0.0.1 jaeger-query
 127.0.0.1 pulsar
 127.0.0.1 sentinel
+127.0.0.1 zokeeper
 ```
 
 [window安装docker教程](https://kcloud.blog.csdn.net/article/details/123039609)
