docs: 修改项目文档

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -153,7 +153,7 @@ services:
   # https://github.com/KouShenhai/Sentinel
   # 账号/密码 => sentinel/laokou123
   sentinel-dashboard:
-    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/sentinel-dashboard:3.5.4
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/sentinel-dashboard:3.5.4.2
     container_name: sentinel-dashboard
     # 保持容器在没有守护程序的情况下运行
     tty: true
@@ -167,6 +167,24 @@ services:
       - env/sentinel.env
     networks:
       - iot_network
+  snail-job:
+    image: registry.cn-shenzhen.aliyuncs.com/koushenhai/snail-job:3.5.4.2
+    container_name: snail-job
+    # 保持容器在没有守护程序的情况下运行
+    tty: true
+    restart: always
+    privileged: true
+    ports:
+      - "8088:8088"
+      - "17888:17888"
+    volumes:
+      - ./snail-job/logs:/opt/data/log
+    env_file:
+      - env/snail-job.env
+    networks:
+      - iot_network
+    depends_on:
+      - postgresql
   portainer:
     image: portainer/portainer-ce:latest
     container_name: portainer
@@ -201,6 +219,29 @@ VERSION=3.5.4
 PROFILE=dev
 SERVER_PORT=8972
 JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseG1GC -Duser.timezone=GMT+08"
+```
+
+增加snail-job.env配置
+
+<font color="red">请注意snail-job路径</font>
+
+<font color="red">请注意snail-job路径</font>
+
+<font color="red">请注意snail-job路径</font>
+
+```shell
+DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
+DATASOURCE_HOST=postgresql
+DATASOURCE_PORT=5432
+DATASOURCE_DATABASE=snail_job
+DATASOURCE_PARAM=tcpKeepAlive=true&reWriteBatchedInserts=true&ApplicationName=snail-job&useSSL=false&reWriteBatchedInserts=true&stringtype=unspecified
+DATASOURCE_PLATFORM=postgresql
+DATASOURCE_USERNAME=root
+DATASOURCE_PASSWORD=laokou123
+PROFILE=dev
+SERVER_PORT=8088
+TZ=Asia/Shanghai
+LANG=zh_CN.UTF-8
 ```
 
 注意：<font color="red">复制到指定目录，然后启动服务【需要授权】</font>
