feat: 全路径覆盖nacos负载均衡代码

--- a/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
+++ b/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
@@ -1176,6 +1176,8 @@ spring:
   cloud:
     nacos:
       discovery:
+		# 开启服务注册&发现
+		enabled: true
 		# 服务发现地址
         server-addr: nacos:8848
 		# 命名空间
@@ -1200,6 +1202,8 @@ spring:
 		# 超过30秒，则标记为不健康
 		heart-beat-timeout: 30000
       config:
+		# 开启配置中心
+		enabled: true
 		# 服务配置的地址
         server-addr: nacos:8848
 		# 命名空间
