--- a/archive/docs/01.指南/08.文章/05.物联网之使用Vertx实现UDP最佳实践【响应式】.md
+++ b/archive/docs/01.指南/08.文章/05.物联网之使用Vertx实现UDP最佳实践【响应式】.md
@@ -184,7 +184,7 @@ class UdpTest {
              }
           });
           Thread.sleep(2000);
-          Assertions.assertDoesNotThrow(datagramSocket::close);
+          assertThatNoException().isThrownBy(datagramSocket::close);
        }
     }
 
