--- a/archive/docs/01.指南/08.文章/00.物联网之对接MQTT最佳实践.md
+++ b/archive/docs/01.指南/08.文章/00.物联网之对接MQTT最佳实践.md
@@ -1423,11 +1423,11 @@ class VertxMqttClientTest {
        properties.setClientId("test-client-1");
        properties.setTopics(Map.of("/test-topic-1/#", 1));
        VertxMqttClient vertxMqttClient = new VertxMqttClient(vertx, properties, messageHandlers);
-       Assertions.assertDoesNotThrow(vertxMqttClient::open);
+       assertThatNoException().isThrownBy(vertxMqttClient::open);
        Thread.sleep(500);
-       Assertions.assertDoesNotThrow(() -> vertxMqttClient.publish("/test-topic-1/test", 1, "test", false, false));
+       (() -> vertxMqttClient.publish("/test-topic-1/test", 1, "test", false, false));
        Thread.sleep(500);
-       Assertions.assertDoesNotThrow(vertxMqttClient::close);
+       (vertxMqttClient::close);
        Thread.sleep(500);
     }
 
