--- a/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
+++ b/archive/docs/01.指南/00.开发手册/27.组件【nacos】.md
@@ -811,42 +811,41 @@ class ConfigUtilsTest {
 		nacosConfigProperties.setPassword("nacos");
 		nacosConfigProperties.setGroup("DEFAULT_GROUP");
 
-		Assertions.assertNotNull(nacosConfigProperties);
-		Assertions.assertEquals("public", nacosConfigProperties.getNamespace());
-		Assertions.assertEquals("127.0.0.1:8848", nacosConfigProperties.getServerAddr());
-		Assertions.assertEquals("nacos", nacosConfigProperties.getPassword());
-		Assertions.assertEquals("nacos", nacosConfigProperties.getUsername());
-		Assertions.assertEquals("DEFAULT_GROUP", nacosConfigProperties.getGroup());
-		Assertions.assertNotNull(nacosConfigProperties.assembleConfigServiceProperties());
+		assertThat(nacosConfigProperties).isNotNull();
+		assertThat( nacosConfigProperties.getNamespace()).isEqualTo("public");
+		assertThat( nacosConfigProperties.getServerAddr()).isEqualTo("127.0.0.1:8848");
+		assertThat(nacosConfigProperties.getPassword()).isEqualTo("nacos");
+		assertThat(nacosConfigProperties.getUsername()).isEqualTo("nacos");
+		assertThat( nacosConfigProperties.getGroup()).isEqualTo("DEFAULT_GROUP");
+		assertThat(nacosConfigProperties.assembleConfigServiceProperties()).isNotNull();
 
 		NacosConfigManager nacosConfigManager = new NacosConfigManager(nacosConfigProperties);
-		Assertions.assertNotNull(nacosConfigManager);
+		assertThat(nacosConfigManager).isNotNull();
 
 		configUtils = new ConfigUtils(nacosConfigManager);
-		Assertions.assertNotNull(configUtils);
+		assertThat(configUtils).isNotNull();
 	}
 
 	@Test
 	void testGetGroup() {
-		Assertions.assertEquals("DEFAULT_GROUP", configUtils.getGroup());
+		assertThat( configUtils.getGroup()).isEqualTo("DEFAULT_GROUP");
 	}
 
 	@Test
 	void testCreateConfigService() throws NacosException {
 		ConfigService configService = ConfigUtils.createConfigService(nacosConfigProperties.getServerAddr());
-		Assertions.assertNotNull(configService);
-		Assertions.assertEquals("UP", configService.getServerStatus());
+		assertThat(configService).isNotNull();
+		assertThat(configService.getServerStatus()).isEqualTo("UP");
 
 		configService = ConfigUtils.createConfigService(nacosConfigProperties.assembleConfigServiceProperties());
-		Assertions.assertNotNull(configService);
-		Assertions.assertEquals("UP", configService.getServerStatus());
+		assertThat(configService).isNotNull();
+		assertThat(configService.getServerStatus()).isEqualTo("UP");
 	}
 
 	@Test
 	void testGetConfig() throws NacosException {
 		String config = configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000);
-		Assertions.assertNotNull(config);
-		Assertions.assertTrue(config.contains("test"));
+		assertThat(config).isNotNull().contains("test");
 		config = configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000, new Listener() {
 			@Override
 			public Executor getExecutor() {
@@ -855,12 +854,10 @@ class ConfigUtilsTest {
 
 			@Override
 			public void receiveConfigInfo(String s) {
-				Assertions.assertNotNull(s);
-				Assertions.assertTrue(s.contains("test"));
+				assertThat(s).isNotBlank().contains("test");
 			}
 		});
-		Assertions.assertNotNull(config);
-		Assertions.assertTrue(config.contains("test"));
+		assertThat(config).isNotNull().contains("test");
 	}
 
 	@Test
@@ -873,8 +870,7 @@ class ConfigUtilsTest {
 
 			@Override
 			public void receiveConfigInfo(String s) {
-				Assertions.assertNotNull(s);
-				Assertions.assertTrue(s.contains("test"));
+				assertThat(s).isNotBlank().contains("test");
 			}
 		});
 	}
@@ -889,48 +885,47 @@ class ConfigUtilsTest {
 
 			@Override
 			public void receiveConfigInfo(String s) {
-				Assertions.assertNotNull(s);
-				Assertions.assertTrue(s.contains("test"));
+				assertThat(s).isNotBlank().contains("test");
 			}
 		});
 	}
 
 	@Test
 	void testPublishConfig() throws NacosException, InterruptedException {
-		Assertions.assertTrue(configUtils.publishConfig("test.yaml", nacosConfigProperties.getGroup(), "test: 123"));
+		assertThat(configUtils.publishConfig("test.yaml", nacosConfigProperties.getGroup(), "test: 123")).isTrue();
 		Thread.sleep(100);
-		Assertions.assertEquals("test: 123", configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000));
+		assertThat(configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000)).isEqualTo("test: 123");
 
-		Assertions.assertTrue(configUtils.publishConfig("test.yaml", nacosConfigProperties.getGroup(), "test: 456", "yaml"));
-		Assertions.assertEquals("test: 456", configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000));
+		assertThat(configUtils.publishConfig("test.yaml", nacosConfigProperties.getGroup(), "test: 456", "yaml")).isTrue();
+		assertThat(configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000)).isEqualTo("test: 456");
 
-		Assertions.assertTrue(configUtils.publishConfig("test.yaml", nacosConfigProperties.getGroup(), "test: 123"));
-		Assertions.assertEquals("test: 123", configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000));
+		assertThat(configUtils.publishConfig("test.yaml", nacosConfigProperties.getGroup(), "test: 123")).isTrue();
+		assertThat(configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000)).isEqualTo("test: 123");
 
 		String md5 = DigestUtils.md5DigestAsHex("test: 123".getBytes());
-		Assertions.assertEquals("5e76b5e94b54e1372f8b452ef64dc55c", md5);
-		Assertions.assertTrue(configUtils.publishConfigCas("test.yaml", nacosConfigProperties.getGroup(), "test: 456", md5));
-		Assertions.assertEquals("test: 456", configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000));
+		assertThat(md5).isEqualTo("5e76b5e94b54e1372f8b452ef64dc55c");
+		assertThat(configUtils.publishConfigCas("test.yaml", nacosConfigProperties.getGroup(), "test: 456", md5)).isTrue();
+		assertThat(configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000)).isEqualTo("test: 456");
 
 		md5 = DigestUtils.md5DigestAsHex("test: 456".getBytes());
-		Assertions.assertEquals("76e2eabbf24a8c90dc3b4372c20a72cf", md5);
-		Assertions.assertTrue(configUtils.publishConfigCas("test.yaml", nacosConfigProperties.getGroup(), "test: 789", md5, "yaml"));
-		Assertions.assertEquals("test: 789", configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000));
+		assertThat(md5).isEqualTo("76e2eabbf24a8c90dc3b4372c20a72cf");
+		assertThat(configUtils.publishConfigCas("test.yaml", nacosConfigProperties.getGroup(), "test: 789", md5, "yaml")).isTrue();
+		assertThat(configUtils.getConfig("test.yaml", nacosConfigProperties.getGroup(), 5000)).isEqualTo("test: 789");
 	}
 
 	@Test
 	void testRemoveConfig() throws NacosException, InterruptedException {
-		Assertions.assertTrue(configUtils.publishConfig("test1.yaml", nacosConfigProperties.getGroup(), "test: 123"));
+		assertThat(configUtils.publishConfig("test1.yaml", nacosConfigProperties.getGroup(), "test: 123")).isTrue();
 		Thread.sleep(2000);
-		Assertions.assertEquals("test: 123", configUtils.getConfig("test1.yaml", nacosConfigProperties.getGroup(), 5000));
+		assertThat( configUtils.getConfig("test1.yaml", nacosConfigProperties.getGroup(), 5000)).isEqualTo("test: 123");
 
-		Assertions.assertTrue(configUtils.removeConfig("test1.yaml", nacosConfigProperties.getGroup()));
-		Assertions.assertNull(configUtils.getConfig("test1.yaml", nacosConfigProperties.getGroup(), 5000));
+		assertThat(configUtils.removeConfig("test1.yaml", nacosConfigProperties.getGroup())).isTrue();
+		assertThat(configUtils.getConfig("test1.yaml", nacosConfigProperties.getGroup(), 5000)).isNull();
 	}
 
 	@Test
 	void testGetServerStatus() {
-		Assertions.assertEquals("UP", configUtils.getServerStatus());
+		assertThat(configUtils.getServerStatus()).isEqualTo("UP");
 	}
 	// @formatter:on
 
@@ -960,187 +955,181 @@ class NamingUtilsTest {
 
 	@BeforeEach
 	void setUp() {
-		Assertions.assertNotNull(nacosDiscoveryProperties);
-		Assertions.assertEquals("public", nacosDiscoveryProperties.getNamespace());
-		Assertions.assertEquals("127.0.0.1:8848", nacosDiscoveryProperties.getServerAddr());
-		Assertions.assertEquals("DEFAULT_GROUP", nacosDiscoveryProperties.getGroup());
-		Assertions.assertEquals("nacos", nacosDiscoveryProperties.getUsername());
-		Assertions.assertEquals("nacos", nacosDiscoveryProperties.getPassword());
-		Assertions.assertEquals("", nacosDiscoveryProperties.getEndpoint());
-		Assertions.assertEquals("", nacosDiscoveryProperties.getAccessKey());
-		Assertions.assertEquals("", nacosDiscoveryProperties.getSecretKey());
-		Assertions.assertEquals("nacos-cluster", nacosDiscoveryProperties.getClusterName());
-		Assertions.assertNotNull(nacosDiscoveryProperties.getNacosProperties());
-		Assertions.assertNotNull(namingUtils);
+		assertThat(nacosDiscoveryProperties).isNotNull();
+		assertThat(nacosDiscoveryProperties.getNamespace()).isEqualTo("public");
+		assertThat(nacosDiscoveryProperties.getServerAddr()).isEqualTo("127.0.0.1:8848");
+		assertThat(nacosDiscoveryProperties.getGroup()).isEqualTo("DEFAULT_GROUP");
+		assertThat(nacosDiscoveryProperties.getUsername()).isEqualTo("nacos");
+		assertThat(nacosDiscoveryProperties.getPassword()).isEqualTo("nacos");
+		assertThat(nacosDiscoveryProperties.getEndpoint()).isEqualTo("");
+		assertThat(nacosDiscoveryProperties.getAccessKey()).isEqualTo("");
+		assertThat(nacosDiscoveryProperties.getSecretKey()).isEqualTo("");
+		assertThat(nacosDiscoveryProperties.getClusterName()).isEqualTo("nacos-cluster");
+		assertThat(nacosDiscoveryProperties.getNacosProperties()).isNotNull();
+		assertThat(namingUtils).isNotNull();
 	}
 
 	@Test
 	void testCreateNamingService() throws Exception {
 		NamingService namingService = NamingUtils.createNamingService(nacosDiscoveryProperties.getServerAddr());
-		Assertions.assertNotNull(namingService);
+		assertThat(namingService).isNotNull();
 		namingService = NamingUtils.createNamingService(nacosDiscoveryProperties.getNacosProperties());
-		Assertions.assertNotNull(namingService);
-	}
-
-	@Test
-	void testGetNamingMaintainService() {
-		NamingMaintainService namingMaintainService = namingUtils.getNamingMaintainService(nacosDiscoveryProperties.getNacosProperties());
-		Assertions.assertNotNull(namingMaintainService);
+		assertThat(namingService).isNotNull();
 	}
 
 	@Test
 	void testIsNacosDiscoveryInfoChanged() {
-		Assertions.assertFalse(namingUtils.isNacosDiscoveryInfoChanged(nacosDiscoveryProperties));
+		assertThat(namingUtils.isNacosDiscoveryInfoChanged(nacosDiscoveryProperties)).isFalse();
 	}
 
 	@Test
 	void testGetAllInstances() throws NacosException, InterruptedException {
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service").isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service").isEmpty()).isTrue();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.getAllInstances("test-service").isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service").isEmpty()).isFalse();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP").isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP").isEmpty()).isTrue();
 
 		Instance instance = new Instance();
 		instance.setIp("127.0.0.1");
 		instance.setPort(8080);
 		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", instance));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty()).isFalse();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", instance));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service", false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", false).isEmpty()).isTrue();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", instance));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.getAllInstances("test-service", Collections.emptyList()).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", Collections.emptyList()).isEmpty()).isFalse();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", instance));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", Collections.emptyList()).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", Collections.emptyList()).isEmpty()).isTrue();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.getAllInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isFalse();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isTrue();
 
 		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty()).isFalse();
 
-		(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080));
+		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", false).isEmpty()).isTrue();
 
-		(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isFalse();
 
-		(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isTrue();
 	}
 
 	@Test
 	void testSelectInstances() throws NacosException, InterruptedException {
-		(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
 
-		(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
 
-		(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", true, false).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true, false).isEmpty()).isFalse();
 
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", true, false).isEmpty());
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), true).isEmpty());
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), true, false).isEmpty());
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), true, false).isEmpty());
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", true).isEmpty());
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", true, false).isEmpty()).isFalse();
+		assertThat(namingUtils.selectInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), true).isEmpty()).isFalse();
+		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), true, false).isEmpty()).isFalse();
+		assertThat(namingUtils.selectInstances("test-service", List.of(nacosDiscoveryProperties.getClusterName()), true, false).isEmpty()).isFalse();
+		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", true).isEmpty()).isFalse();
+		assertThat(namingUtils.selectInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), true).isEmpty()).isFalse();
 
-		(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty());
+		assertThat(namingUtils.getAllInstances("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false).isEmpty()).isTrue();
 	}
 
 	@Test
 	void testSelectOneHealthyInstance() throws NacosException, InterruptedException {
-		(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
 
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service"));
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP"));
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service", false));
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", false));
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service", List.of(nacosDiscoveryProperties.getClusterName())));
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName())));
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service", List.of(nacosDiscoveryProperties.getClusterName()), false));
-		Assertions.assertNotNull(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false));
+		assertThat(namingUtils.selectOneHealthyInstance("test-service")).isNotNull();
+		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP")).isNotNull();
+		assertThat(namingUtils.selectOneHealthyInstance("test-service", false)).isNotNull();
+		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", false)).isNotNull();
+		assertThat(namingUtils.selectOneHealthyInstance("test-service", List.of(nacosDiscoveryProperties.getClusterName()))).isNotNull();
+		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()))).isNotNull();
+		assertThat(namingUtils.selectOneHealthyInstance("test-service", List.of(nacosDiscoveryProperties.getClusterName()), false)).isNotNull();
+		assertThat(namingUtils.selectOneHealthyInstance("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), false)).isNotNull();
 
-		(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
 	}
 
 	@Test
 	void testSubscribeService() throws NacosException, InterruptedException {
-		(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
 
-		(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", Assertions::assertNotNull));
-		(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", Assertions::assertNotNull));
+		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", evt -> assertThat(evt).isNotNull()));
+		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", evt -> assertThat(evt).isNotNull()));
 
-		(() -> namingUtils.subscribe("test-service", Assertions::assertNotNull));
-		(() -> namingUtils.unsubscribe("test-service", Assertions::assertNotNull));
+		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", evt -> assertThat(evt).isNotNull()));
+		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", evt -> assertThat(evt).isNotNull()));
 
-		(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), Assertions::assertNotNull));
-		(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), Assertions::assertNotNull));
+		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
+		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
 
-		(() -> namingUtils.subscribe("test-service", List.of(nacosDiscoveryProperties.getClusterName()), Assertions::assertNotNull));
-		(() -> namingUtils.unsubscribe("test-service", List.of(nacosDiscoveryProperties.getClusterName()), Assertions::assertNotNull));
+		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
+		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", List.of(nacosDiscoveryProperties.getClusterName()), evt -> assertThat(evt).isNotNull()));
 
 		// 只选择订阅ip为`127.0`开头的实例。
 		NamingSelector selector = NamingSelectorFactory.newIpSelector("127.0.*");
-		(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", selector, Assertions::assertNotNull));
-		(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", selector, Assertions::assertNotNull));
+		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", selector, evt -> assertThat(evt).isNotNull()));
+		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", "DEFAULT_GROUP", selector, evt -> assertThat(evt).isNotNull()));
 
-		(() -> namingUtils.subscribe("test-service", selector, Assertions::assertNotNull));
-		(() -> namingUtils.unsubscribe("test-service", selector, Assertions::assertNotNull));
+		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", selector, evt -> assertThat(evt).isNotNull()));
+		assertThatNoException().isThrownBy(() -> namingUtils.unsubscribe("test-service", selector, evt -> assertThat(evt).isNotNull()));
 
-		(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
 	}
 
 	@Test
 	void testGetServicesOfServer() throws NacosException, InterruptedException {
-		(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.registerInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertFalse(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isFalse();
 
-		Assertions.assertTrue(namingUtils.getServicesOfServer(1, 10, "DEFAULT_GROUP").getCount() > 0);
-		Assertions.assertTrue(namingUtils.getServicesOfServer(1, 10).getCount() > 0);
+		assertThat(namingUtils.getServicesOfServer(1, 10, "DEFAULT_GROUP").getCount() > 0).isTrue();
+		assertThat(namingUtils.getServicesOfServer(1, 10).getCount() > 0).isTrue();
 
-		(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", Assertions::assertNotNull));
-		Assertions.assertFalse(namingUtils.getSubscribeServices().isEmpty());
+		assertThatNoException().isThrownBy(() -> namingUtils.subscribe("test-service", "DEFAULT_GROUP", evt -> assertThat(evt).isNotNull()));
+		assertThat(namingUtils.getSubscribeServices().isEmpty()).isFalse();
 
-		(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
+		assertThatNoException().isThrownBy(() -> namingUtils.deregisterInstance("test-service", "DEFAULT_GROUP", "127.0.0.1", 8080, nacosDiscoveryProperties.getClusterName()));
 		Thread.sleep(1000);
-		Assertions.assertTrue(namingUtils.selectInstances("test-service", true).isEmpty());
+		assertThat(namingUtils.selectInstances("test-service", true).isEmpty()).isTrue();
 	}
 
 	@Test
@@ -1148,19 +1137,19 @@ class NamingUtilsTest {
 		Instance instance = new Instance();
 		instance.setIp("127.0.0.1");
 		instance.setPort(8080);
-		(() -> namingUtils.batchRegisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
+		assertThatNoException().isThrownBy(() -> namingUtils.batchRegisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
 		Thread.sleep(1000);
-		Assertions.assertNotEquals(2, namingUtils.selectInstances("test-service", true).size());
+		assertThat(namingUtils.selectInstances("test-service", true).size()).isEqualTo(1);
 
-		(() -> namingUtils.batchDeregisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
+		assertThatNoException().isThrownBy(() -> namingUtils.batchDeregisterInstance("test-service", "DEFAULT_GROUP", List.of(instance)));
 		Thread.sleep(1000);
-		Assertions.assertEquals(0, namingUtils.selectInstances("test-service", false).size());
+		assertThat(namingUtils.selectInstances("test-service", false).size()).isEqualTo(0);
 	}
 
 	@Test
 	void testNacosServiceShutDown() throws InterruptedException {
 		Thread.sleep(1000);
-		(namingUtils::nacosServiceShutDown);
+		assertThatNoException().isThrownBy(namingUtils::nacosServiceShutDown);
 	}
 
 }
