--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -28,6 +28,8 @@ permalink: /pages/b04951/
 
 🚀 还原Resilience4j为Sentinel，基于docker部署，方便启动和管理
 
+🚀 Snail Job基于docker部署，方便启动和管理
+
 🚀 Assertions替换成AssertJ
 
 #### 3.5.1更新日志
