--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -32,6 +32,8 @@ permalink: /pages/b04951/
 
 🚀 Assertions替换成AssertJ
 
+🚀 使用dubbo Triple协议，方便后面与go语言对接【gRpc】，移除dubbo fury序列化
+
 #### 3.5.1更新日志
 
 ###### 版本
