feat: spring官方宣布停止维护reactor-kafka，为了与spring-kafka版本保持一致，移除reactor-kafka

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -18,11 +18,13 @@ permalink: /pages/b04951/
 
 ###### 功能
 
-🚀 移除优雅停机
+🚀 移除优雅停机过滤器
 
 🚀 网关加密去掉，由auth服务解密【用户名密码登录】
 
 🚀 去掉@Autowired注解，改为构造器注入
+
+🚀 项目禁止使用@Autowired和@SneakyThrows注解
 
 🚀 重构oss上传文件【本地/亚马逊S3】，独立服务，基于Dubbo调用
 
