feat: 提交生成器代码

--- a/archive/docs/01.指南/05.后端指南/00.COLA代码规范.md
+++ b/archive/docs/01.指南/05.后端指南/00.COLA代码规范.md
@@ -8,7 +8,7 @@ permalink: /pages/59afe2/
 
 话不多说，跟我一起学习COLA，以下内容来源于书本及个人理解，请认真阅读！！！
 
-&emsp; 最近看完了《代码精进之路从码农到工匠》和《程序员的底层思维》，作者张建飞开篇强调写好代码并不是一件容易的事，需要持续地学习和实践。本人也赞同，因此，本人对重点内容做了笔记，希望对你有所帮助。
+&emsp; 最近看完了《代码精进之路从码农到工匠》和《程序员的底层思维》，作者张建飞老师，开篇强调写好代码并不是一件容易的事，需要持续地学习和实践。本人也赞同，因此，本人对重点内容做了笔记，希望对你有所帮助。
 
 # 一、命名
 
