--- a/archive/docs/01.指南/08.文章/07.物联网之常见网络配置.md
+++ b/archive/docs/01.指南/08.文章/07.物联网之常见网络配置.md
@@ -534,7 +534,7 @@ network:
 # 应用配置
 sudo netplan apply
 # 重启网络
-sudo systemctl restart NetworkManager
+sudo systemctl restart networking
 ```
 
 如果出现这种 `sudo: unable to resolve host xxx: Name or service not known` 问题
