test: 规范Java单元测试代码规范

--- a/CONTRIBUTING.adoc
+++ b/CONTRIBUTING.adoc
@@ -26,3 +26,8 @@
 
 == 代码规范
 https://koushenhai.github.io/pages/59afe2[COLA代码规范]
+
+== 测试用例
+- 测试用例的类名必须以Test结尾
+- 测试用例的方法名必须以test开头的驼峰命名法，并且使用下划线连接，比如test_getUser
+- 强制使用 `org.assertj.core.api.Assertions` 断言，禁止使用 `org.junit.jupiter.api.Assertions` 断言
