--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -38,6 +38,8 @@ permalink: /pages/b04951/
 
 🚀 使用dubbo Triple协议，方便后面与go语言对接【gRpc】，使用Protobuf序列化，移除dubbo fury序列化
 
+🚀 增加单元测试用例规范
+
 #### 3.5.1更新日志
 
 ###### 版本
