--- a/src/docs/asciidoc/GithubCI之Maven构建.adoc
+++ b/src/docs/asciidoc/GithubCI之Maven构建.adoc
@@ -21,7 +21,37 @@ https://docs.github.com/en/actions/automating-builds-and-tests/building-and-test
 
 image:image/tools/img_9.png[使用 Maven 启动器工作流程]
 
-== 配置说明
+== 实践
 
-===  
+1. 创建一个名为 `.github/workflows/maven.yml` 的文件，并添加以下内容：
 
+[source,yaml]
+----
+name: Java CI with Maven
+
+on:
+  push:
+    branches: [ "master" ]
+  pull_request:
+    branches: [ "master" ]
+
+jobs:
+  build:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        java-version: [21]
+    steps:
+      - uses: actions/checkout@v5.0.0
+      - name: Set up JDK 21 for x64
+        uses: actions/setup-java@v4.7.1
+        with:
+          java-version: '21'
+          distribution: 'temurin'
+          cache: maven
+          architecture: x64
+      - name: Run the Maven verify phase
+        run: mvn --batch-mode --update-snapshots verify -DskipTests
+      - name: Build with Maven
+        run: mvn clean install -P dev -DskipTests -B
+----
