docs：更改错别字

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -30,7 +30,7 @@ permalink: /pages/10bfa7/
 127.0.0.1 jaeger-query
 127.0.0.1 pulsar
 127.0.0.1 sentinel
-127.0.0.1 zokeeper
+127.0.0.1 zookeeper
 ```
 
 [window安装docker教程](https://kcloud.blog.csdn.net/article/details/123039609)
@@ -287,7 +287,7 @@ docker-compose up - d
 		<mirrorOf>*,!spring-milestones,!spring-snapshots</mirrorOf>
 		<url>https://mirrors.cloud.tencent.com/nexus/repository/maven-public/</url>
 	</mirror>
-</mirrons>
+</mirrors>
 ```
 
 🚀 软件版本
