docs: 提交微服务之注册中心与ShardingSphere关于分库分表的那些事文章

--- a/archive/docs/01.指南/09.推荐/00.IntelliJ IDEA插件推荐.md
+++ b/archive/docs/01.指南/09.推荐/00.IntelliJ IDEA插件推荐.md
@@ -10,3 +10,6 @@ permalink: /pages/a438ae/
 
 ##### 1. Show Comment
 - **功能**：在代码中显示注释，帮助你更好地理解代码逻辑。
+
+##### 2. Love Your Eyes Theme
+- **功能**：提供柔和的色彩主题，减少眼睛疲劳。
