--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -10,11 +10,13 @@ permalink: /pages/b04951/
 
 ###### 版本
 
-🚀 升级Spring Boot版本到3.5.4
+🚀 升级Spring Boot版本到3.5.5
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.2
 
 🚀 升级Spring Cloud Alibaba版本到2023.0.3.3
+
+🚀 Fory升级到0.12.0
 
 ###### 功能
 
@@ -48,7 +50,7 @@ permalink: /pages/b04951/
 
 🚀 升级Spring Boot版本到3.5.3
 
-🚀 Fory升级到0.12.0-SNAPSHOT
+🚀 Fory升级到0.11
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.1
 
