docs: 修改更新日志【多节点动态路由监听并自动刷新缓存，无需重启服务】

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -44,6 +44,8 @@ permalink: /pages/b04951/
 
 🚀 日志跟踪ID改为Elasticsearch自动生成，提高系统吞吐量
 
+🚀 实现监听Nacos路由变更，自动刷新多节点Gateway动态路由，无需重启服务
+
 #### 3.5.1更新日志
 
 ###### 版本
