feat: 提交文档，瞎几把写的

--- a/archive/docs/03.感悟/02.修行/00.修身_养生_情感.md
+++ b/archive/docs/03.感悟/02.修行/00.修身_养生_情感.md
@@ -33,7 +33,7 @@ permalink: /pages/623578/
 ###### 养生（自己不爱惜自己身体，谁又会心疼你呢？）
 
 - 堵漏（身体有病治病，无病则改正不良习惯，比如熬夜，放纵）
-- 饮食清淡，切记过饥过饱，建议喝粥养胃
+- 饮食清淡，切记过饥过饱，建议喝粥养胃，少喝碳酸饮料，少吃油炸食品
 - 调节自己的心情，保持乐观的生活态度
 - 锻炼身体（身体羸弱可以尝试八段锦/八部金刚，身体好点可以仰卧起坐/俯卧撑/跑步，根据自己的身体条件适当锻炼）
 - 但行好事莫问前程，好的念头会导致好的结果（吸引力法则）
@@ -52,6 +52,7 @@ permalink: /pages/623578/
 - 坚持坚持再坚持
 - 空杯心态，虚怀若谷
 - 爱自己的前提就是照顾好自己身体
+- 尽人事听天命【竭尽全力向前冲】，无可挽回就顺其自然【挽回不了就随他去吧】
 
 ###### 该做的事情（往后的路靠自己走）
 
@@ -68,13 +69,15 @@ permalink: /pages/623578/
 - 不怕事，也不惹事（维护自己的正当权益，不让自己的利益受损就行）
 - 尊重每一个人，这样可以避免很多麻烦（无论疾病、残疾、外貌、学历、宗教信仰，文化、性取向等等）
 - 理性思考后面发生的一切，积极承担属于自己的责任，以及与自己相关的一切后果
-- 杜绝随便造谣，捏造不存在的事情（轻则点名批评，重则构成犯罪，进行行政处罚）(
-  作为公众人物，更加要注意自己的行为言论，不然就是引火上身，咎由自取)
+- 杜绝随便造谣，捏造不存在的事情（轻则点名批评，重则构成犯罪，进行行政处罚）(作为公众人物，更加要注意自己的行为言论，不然就是引火上身，咎由自取)
 - 政治问题什么的禁止讨论，不然就是引火上身
 
-###### 感情
+###### 感情（好的感情一定是互相成就）
 
-- 对于别人的感情，始终处于中立的态度，不发表意见，不然最后受伤的是自己（两人一旦分手，可能会怨你什么什么的）
-- 在外人看来，两人分手，其实两个人都有问题，但不排除单方面的原因，比如出轨/家暴
+- 对于别人的感情，始终处于中立的态度，不发表意见，不然最后受伤的是自己（两人一旦分手，可能会怨你什么的）
+- 在外人看来，两人分手，其实两个人都有问题，但不排除单方面的原因，比如出轨、家暴
+- 强扭的瓜不甜，学会拒绝不合适的人
+- 感觉事情不对劲就立马跑路，否则浪费自己的时间和精力，甚至钱财
+- 男生追求女生就三点：保持真诚、愿意主动、不怕犯错
 
 我是老寇，我们下次再见啦！
