--- a/README.adoc
+++ b/README.adoc
@@ -92,6 +92,7 @@ image:doc/image/img.png[COLA架构图,400,400,align=center]
 |===
 |序号 | 租户   |账号     |密码
 |1    |laokou |admin   |admin123
+|2    |laokouyun |admin   |admin123
 |===
 
 https://www.laokou.org.cn[老寇IoT云平台在线体验（请点击我，境外服务器网络延迟请稍候）]
