feat: 升级es至9.1.3，移除es8

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -18,6 +18,8 @@ permalink: /pages/b04951/
 
 🚀 Fory升级到0.12.0
 
+🚀 升级Elasticsearch至9.1.3，不兼容Elasticsearch8【已移除Elasticsearch8】
+
 ###### 功能
 
 🚀 移除优雅停机过滤器
