feat: spring security基于token拦截

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -48,9 +48,11 @@ permalink: /pages/b04951/
 
 🚀 实现监听Nacos路由变更，自动刷新多节点Gateway动态路由，无需重启服务
 
-🚀 重构security模块，增加响应式资源认证
+🚀 重构security模块，增加响应式资源认证【基于token拦截】
 
 🚀 增加testcontainers测试数据库
+
+🚀 禁止静态导入和全包导入
 
 #### 3.5.1更新日志
 
