--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -48,13 +48,17 @@ permalink: /pages/b04951/
 
 🚀 实现监听Nacos路由变更，自动刷新多节点Gateway动态路由，无需重启服务
 
-🚀 重构security模块，增加响应式资源认证【基于token拦截】
+🚀 基于Spring-Data-Repository重构security模块，SAS暂不支持响应式，无法扩展响应式API
 
 🚀 增加testcontainers测试数据库
 
 🚀 禁止静态导入和全包导入
 
-🚀 增加MCP Server
+🚀 增加基于Nacos注册的MCP Server【异步】和MCP Client【同步】
+
+###### 修复BUG
+
+🚀 Redis响应式和阻塞式依赖传递问题，导致项目无法启动
 
 #### 3.5.1更新日志
 
