--- a/README.adoc
+++ b/README.adoc
@@ -271,7 +271,7 @@ https://cla-assistant.io/KouShenhai/KCloud-Platform-IoT[贡献者许可协议]
 
 KCloud-Platform-IoT 开源软件遵循 https://www.apache.org/licenses/LICENSE-2.0.html[Apache 2.0 协议] 请务必保留作者、Copyright信息
 
-=== 🐮 二次开源登记（二次开源不允许更换开源协议，否则视为侵权）
+=== 🐮 二次开源登记（Apache2.0开源协议，请保留作者、Copyright信息）
 
 [width=100%]
 |===
