feat: 提交网关sqlite代码

--- a/archive/docs/01.指南/02.常用命令/00.Centos7常用命令.md
+++ b/archive/docs/01.指南/02.常用命令/00.Centos7常用命令.md
@@ -61,6 +61,9 @@ tail -n 行数 文件 => tail -n 1000 1.txt
 
 # 查看文件
 find /-name 文件 => find /-name 1.txt
+
+# 查看Linux发行版本
+cat /etc/os-release
 ```
 
 #### 网络
