feat: 修改readme，升级es9至9.1.4

--- a/archive/docs/01.指南/08.文章/09.物联网之小白调试网关设备.md
+++ b/archive/docs/01.指南/08.文章/09.物联网之小白调试网关设备.md
@@ -59,7 +59,11 @@ network:
             dhcp4: false
             addresses:
                 - 192.168.1.33/24
-            gateway4: 192.168.1.1
+		    # gateway4已被弃用，高版本可能不生效
+			# gateway4: 192.168.1.1
+			routes:
+				- to: 0.0.0.0/0
+				  via: 192.168.1.1
             nameservers:
                 addresses:
                     - 8.8.8.8
@@ -68,7 +72,11 @@ network:
             dhcp4: false
             addresses:
                 - 100.100.1.15/24
-            gateway4: 100.100.1.1
+			# gateway4已被弃用，高版本可能不生效
+			# gateway4: 100.100.1.1
+			routes:
+				- to: 0.0.0.0/0
+				  via: 100.100.1.1
             nameservers:
                 addresses:
                     - 223.5.5.5
@@ -80,7 +88,25 @@ network:
 sudo netplan apply
 # 重启网络
 sudo systemctl restart networking
+# 查看网络是否生效
+ifconfig
 ```
+
+DNS无法解析配置
+
+```shell
+# 修改配置
+vi /etc/resolv.conf
+
+nameserver 8.8.8.8
+nameserver 114.114.114.114
+
+vi /ect/hosts
+
+127.0.0.1 localhost
+127.0.0.1 主机名
+```
+
 
 #### 6.网络交换机
 
