--- a/archive/docs/01.指南/01.环境搭建/10.Linux搭建Go开发环境.md
+++ b/archive/docs/01.指南/01.环境搭建/10.Linux搭建Go开发环境.md
@@ -48,13 +48,14 @@ go env
 
 ### 交叉编译
 
-有些Go应用集成了很多组件，某些组件使用了**CGO**，比如**SQLite**，我们直接编译时会出现报错，这时我们需要用**交叉编译**
+有些Go应用集成了很多组件，某些组件使用了**CGO**，比如**go-sqlite3**，我们直接编译时会出现报错，这时我们需要用**交叉编译**
 
 以**ARM64**设备为例，说白了就是使用**交叉编译工具**来帮你编译（**aarch64-linux-gnu-gcc** 和 **aarch64-linux-gnu-g++**）
 
 <font color="red">注意：编译的应用要放在什么操作系统上面运行，就用什么样的编译工具</font>
 
 ```shell
+# 开启CGO编译
 set GOARCH=arm
 go env -w GOARCH=arm
 set GOARM=8
@@ -67,6 +68,19 @@ set CC=aarch64-linux-gnu-gcc
 set CXX=aarch64-linux-gnu-g++
 go env -w  CC=aarch64-linux-gnu-gcc
 go env -w  CXX=aarch64-linux-gnu-g++
+go build -o xxx .
+```
+
+```shell
+# 不开启CGO编译
+set GOARCH=arm
+go env -w GOARCH=arm
+set GOARM=8
+go env -w GOARM=8
+set GOOS=linux
+go env -w GOOS=linux
+set CGO_ENABLED=0
+go env -w CGO_ENABLED=0
 go build -o xxx .
 ```
 
