--- a/archive/docs/01.指南/01.环境搭建/10.Linux搭建Go开发环境.md
+++ b/archive/docs/01.指南/01.环境搭建/10.Linux搭建Go开发环境.md
@@ -56,8 +56,8 @@ go env
 
 ```shell
 # 开启CGO编译
-set GOARCH=arm
-go env -w GOARCH=arm
+set GOARCH=arm64
+go env -w GOARCH=arm64
 set GOARM=8
 go env -w GOARM=8
 set GOOS=linux
@@ -65,16 +65,16 @@ go env -w GOOS=linux
 set CGO_ENABLED=1
 go env -w CGO_ENABLED=1
 set CC=aarch64-linux-gnu-gcc
-set CXX=aarch64-linux-gnu-g++
 go env -w  CC=aarch64-linux-gnu-gcc
+set CXX=aarch64-linux-gnu-g++
 go env -w  CXX=aarch64-linux-gnu-g++
 go build -o xxx .
 ```
 
 ```shell
 # 不开启CGO编译
-set GOARCH=arm
-go env -w GOARCH=arm
+set GOARCH=arm64
+go env -w GOARCH=arm64
 set GOARM=8
 go env -w GOARM=8
 set GOOS=linux
