--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -218,7 +218,7 @@ AUTH_PASSWORD=laokou123
 VERSION=3.5.4
 PROFILE=dev
 SERVER_PORT=8972
-JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseG1GC -Duser.timezone=GMT+08"
+JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseCompactObjectHeaders -XX:+UseG1GC -Duser.timezone=GMT+08"
 ```
 
 增加snail-job.env配置
