--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -20,6 +20,8 @@ permalink: /pages/b04951/
 
 🚀 升级Elasticsearch至9.1.4，不兼容Elasticsearch8【已移除Elasticsearch8】
 
+🚀 支持JDK25，使用JDK21，请切换JDK版本
+
 ###### 功能
 
 🚀 移除优雅停机过滤器
@@ -55,6 +57,8 @@ permalink: /pages/b04951/
 🚀 禁止静态导入和全包导入
 
 🚀 增加基于Nacos注册的MCP Server【异步】和MCP Client【同步】
+
+🚀 移除GraalVM-JS，改为Java插件方式，方便二次开发
 
 ###### 修复BUG
 
