feat: 修改文档，遇到Ubuntu过期问题

--- a/archive/docs/01.指南/01.环境搭建/09.Ubuntu20.04忘记密码或指纹错误.md
+++ b/archive/docs/01.指南/01.环境搭建/09.Ubuntu20.04忘记密码或指纹错误.md
@@ -42,4 +42,14 @@ mount -o remount,rw /
 exec /sbin/init
 ```
 
+Ubuntu 系统中遇到密码定期过期导致无法使用的情况，这实际上是系统内置的一项安全策略。该策略旨在通过强制用户定期更换密码，来提升账户的安全性。
+
+```shell
+# 查看当前密码过期信息
+sudo chage -l root
+# 设置密码永不过期
+sudo chage -M -1 root
+sudo passwd -x -1 root
+```
+
 我是老寇，我们下次再见啦！
