feat: 规范项目版本，便于依赖管理

--- a/archive/docs/01.指南/01.环境搭建/09.Ubuntu20.04忘记密码或指纹错误.md
+++ b/archive/docs/01.指南/01.环境搭建/09.Ubuntu20.04忘记密码或指纹错误.md
@@ -52,4 +52,10 @@ sudo chage -M -1 root
 sudo passwd -x -1 root
 ```
 
+Ubuntu桌面版需要某个软件自启动
+
+```shell
+gnome-session-properties
+```
+
 我是老寇，我们下次再见啦！
