feat: 简化配置，精简依赖，删除不需要的代码【4.0提交】

--- a/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
+++ b/archive/docs/01.指南/03.快速上手/01.项目启动【dev环境】.md
@@ -230,12 +230,12 @@ JVM_OPTS="-Xmx512m -Xms512m -Xmn256m -XX:+UseCompactObjectHeaders -XX:+UseG1GC -
 <font color="red">请注意snail-job路径</font>
 
 ```shell
-DATASOURCE_DRIVER_CLASS_NAME=org.postgresql.Driver
-DATASOURCE_HOST=postgresql
-DATASOURCE_PORT=5432
+DS_DRIVER=org.postgresql.Driver
+DS_HOST=postgresql
+DS_PORT=5432
 DATASOURCE_DATABASE=snail_job
 DATASOURCE_PARAM=tcpKeepAlive=true&reWriteBatchedInserts=true&ApplicationName=snail-job&useSSL=false&reWriteBatchedInserts=true&stringtype=unspecified
-DATASOURCE_PLATFORM=postgresql
+DS_PLATFORM=postgresql
 DATASOURCE_USERNAME=root
 DATASOURCE_PASSWORD=laokou123
 PROFILE=dev
