feat: 优化代码风格

--- a/archive/docs/01.指南/05.后端指南/09.Spring Cloud Gateway+Redis+Nacos之动态路由和负载均衡.md
+++ b/archive/docs/01.指南/05.后端指南/09.Spring Cloud Gateway+Redis+Nacos之动态路由和负载均衡.md
@@ -433,7 +433,7 @@ public class NacosLoadBalancerClientConfiguration {
           InetIPv6Utils inetIPv6Utils, List<ServiceInstanceFilter> serviceInstanceFilters,
           List<LoadBalancerAlgorithm> loadBalancerAlgorithms) {
        String serviceId = environment.getProperty(LoadBalancerClientFactory.PROPERTY_NAME);
-       Map<String, LoadBalancerAlgorithm> loadBalancerAlgorithmMap = new HashMap<>();
+       Map<String, LoadBalancerAlgorithm> loadBalancerAlgorithmMap = MapUtils.newHashMap(loadBalancerAlgorithm.size());
        loadBalancerAlgorithms.forEach(loadBalancerAlgorithm -> {
           if (!loadBalancerAlgorithmMap.containsKey(loadBalancerAlgorithm.getServiceId())) {
              loadBalancerAlgorithmMap.put(loadBalancerAlgorithm.getServiceId(), loadBalancerAlgorithm);
