--- a/archive/docs/01.指南/08.文章/00.物联网之对接MQTT最佳实践.md
+++ b/archive/docs/01.指南/08.文章/00.物联网之对接MQTT最佳实践.md
@@ -1133,7 +1133,7 @@ public class MqttClientProperties {
 
     private int reconnectAttempts = Integer.MAX_VALUE;
 
-    private Map<String, Integer> topics = new HashMap<>(0);
+    private Map<String, Integer> topics = MapUtils.newHashMap(0);
 
     private int willQos = 1;
 
