--- a/archive/docs/01.指南/08.文章/01.物联网之使用Vertx实现MQTT-Server最佳实践【响应式】.md
+++ b/archive/docs/01.指南/08.文章/01.物联网之使用Vertx实现MQTT-Server最佳实践【响应式】.md
@@ -127,7 +127,7 @@ public class KafkaAutoConfig {
     @Bean
     @ConditionalOnWebApplication(type = ConditionalOnWebApplication.Type.REACTIVE)
     public SenderOptions<String, String> senderOptions(KafkaProperties kafkaProperties) {
-       Map<String, Object> props = new HashMap<>();
+       Map<String, Object> props = MapUtils.newHashMap(7);
        KafkaProperties.Producer producer = kafkaProperties.getProducer();
        props.put(ProducerConfig.BOOTSTRAP_SERVERS_CONFIG, kafkaProperties.getBootstrapServers());
        props.put(ProducerConfig.ACKS_CONFIG, producer.getAcks());
@@ -142,7 +142,7 @@ public class KafkaAutoConfig {
     @Bean
     @ConditionalOnWebApplication(type = ConditionalOnWebApplication.Type.REACTIVE)
     public ReceiverOptions<String, String> receiverOptions(KafkaProperties kafkaProperties) {
-       Map<String, Object> props = new HashMap<>();
+       Map<String, Object> props = MapUtils.newHashMap(6);
        KafkaProperties.Consumer consumer = kafkaProperties.getConsumer();
        props.put(ConsumerConfig.BOOTSTRAP_SERVERS_CONFIG, kafkaProperties.getBootstrapServers());
        props.put(ConsumerConfig.GROUP_ID_CONFIG, consumer.getGroupId());
