--- a/archive/docs/01.指南/08.文章/06.Spring Cloud Gateway实现分布式限流和熔断降级.md
+++ b/archive/docs/01.指南/08.文章/06.Spring Cloud Gateway实现分布式限流和熔断降级.md
@@ -151,7 +151,7 @@ public static void apiConcurrent(String url,Map<String,String> params) {
         ThreadPoolExecutor pool = new ThreadPoolExecutor(5, 200, 0L, TimeUnit.SECONDS, new SynchronousQueue<>());
         //同步工具
         CountDownLatch latch = new CountDownLatch(count);
-        Map<String,String> dataMap = new HashMap<>(1);
+        Map<String,String> dataMap = MapUtils.newHashMap(1);
         dataMap.put("authorize","XXXXXXX");
         for (int i = 0; i < count; i++) {
             pool.execute(() -> {
