--- a/archive/docs/01.指南/08.文章/10.微服务之注册中心与ShardingSphere关于分库分表的那些事.md
+++ b/archive/docs/01.指南/08.文章/10.微服务之注册中心与ShardingSphere关于分库分表的那些事.md
@@ -475,7 +475,7 @@ public abstract class AbstractDriverDataSourceCache {
 		catch (final SQLException ex) {
 			throw (T) ex;
 		}
-		catch (Exception e) {
+		catch (Exception ex) {
 			throw new RuntimeException(e);
 		}
 	}
