feat: 去掉部门path字段

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -74,6 +74,8 @@ permalink: /pages/b04951/
 
 🚀 日志跟踪ID改为Elasticsearch自动生成，提高系统吞吐量
 
+🚀 部门去掉Path字段，数据权限从5种改为3种【全部/自选权限/仅本人】
+
 ###### 修复BUG
 
 🚀 Redis响应式和阻塞式依赖传递问题，导致项目无法启动
