docs: 增加老实人_直男脱单文档

--- a/archive/docs/03.感悟/02.修行/01.老实人_直男脱单【老寇总结】.md
+++ b/archive/docs/03.感悟/02.修行/01.老实人_直男脱单【老寇总结】.md
@@ -23,3 +23,7 @@ permalink: /pages/d2fd30/
 7.当女孩子问到为什么选择你？必须回答有责任心，懂得照顾人之类的【总之，就是哄好女生，至于能不能走下去，至少先过这关再说】
 
 8.男人应该以事业为重，不要tmd患得患失，没什么用
+
+9.不要说一些无所谓的话，很容易失去女生的好感，切记切记
+
+最后，我想说，人生不过三万天，逍遥自在，开开心心最重要！！！
