docs: 增加老实人_直男脱单文档

--- a/archive/docs/03.感悟/02.修行/01.老实人_直男脱单【老寇总结】.md
+++ b/archive/docs/03.感悟/02.修行/01.老实人_直男脱单【老寇总结】.md
@@ -6,7 +6,7 @@ permalink: /pages/d2fd30/
 
 你好，有缘人，我是老寇，欢迎来到老寇云平台!
 
-我把自己所知道的，想说的内容，分享一下，以下内容来自自己的反思和总结
+我把自己所知道的，想说的内容，分享一下，以下内容来自老寇的反思和总结
 
 1.女生希望另一方有自己的规划，不要什么都问她，约会前记得做好规划，不然搞着搞着，女生就没了兴趣，认为自己是不善于规划的人
 
