style: 代码规范 docs: 修改readme

--- a/archive/docs/01.指南/05.后端指南/07.分布式链路跟踪之ELK日志.md
+++ b/archive/docs/01.指南/05.后端指南/07.分布式链路跟踪之ELK日志.md
@@ -594,7 +594,7 @@ public class TraceHandler {
 
 	@Data
 	@Index(setting = @Setting(refreshInterval = "-1"))
-	public final static class TraceIndex implements Serializable {
+	public static final class TraceIndex implements Serializable {
 
 		@Field(type = Type.LONG)
 		private String id;
