--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -18,15 +18,17 @@ permalink: /pages/b04951/
 
 ###### 版本
 
-🚀 升级Spring Boot版本到3.5.6
+🚀 升级Spring Boot版本到3.5.7
 
 🚀 升级Spring OAuth2 Authorization Server版本到1.5.3
 
 🚀 升级Spring Cloud Alibaba版本到2023.0.3.3
 
-🚀 Fory升级到0.12.0
+🚀 Fory升级到0.12.3
 
 🚀 升级Elasticsearch至9.1.5，不兼容Elasticsearch8【已移除Elasticsearch8】
+
+🚀 升级Nacos至3.1.0
 
 🚀 支持JDK25，使用JDK21，请切换JDK版本
 
