--- a/archive/docs/03.感悟/02.修行/00.修身_养生_情感.md
+++ b/archive/docs/03.感悟/02.修行/00.修身_养生_情感.md
@@ -30,6 +30,24 @@ permalink: /pages/623578/
 - 不要打架，打赢坐牢，打输住院（现在，人比较浮躁，戾气重，万一别人不管不顾，下死手，发泄自己的情绪，那就是有你受的啦）
 - 不要随便跟人私奔，也不要随便和一个男人/女人上床
 
+###### 切记（列举会挂掉事例，来源网上故事）
+
+#### 人是非常 非常 非常 脆弱的，请不要瞎几把作，容易挂
+
+#### 人是非常 非常 非常 脆弱的，请不要瞎几把作，容易挂
+
+#### 人是非常 非常 非常 脆弱的，请不要瞎几把作，容易挂
+
+- 在脖子种草莓，容易挂【颈动脉窦受到挤压，会导致血压急剧下降，严重会出现休克或si wang，也会挂】
+- 嫖娼出轨玩的花，染上不好的bing，容易挂
+- 天天闻臭袜子，容易挂
+- 对未来非常焦虑，整天抑郁，会出现qing sheng想法，不纠正自己思想，容易挂
+- 经常去夜场喝8+1乱xing【喝大酒，不得劲就去放纵】，染上不好的bing，容易挂
+- 玩的花患上了bing，不配合治疗，摆烂的，容易挂
+- 随便和男人/女人shang chuang，会染上不好的bing，容易挂，就算是要结婚也一定要做婚检
+- 把饮料/啤酒/咖啡/乱七八糟的奶茶当水喝，容易挂
+- 对方有mei du或hiv，你和她shang chuang，即使dai tao也防不住，会中招，容易挂
+
 ###### 养生（自己不爱惜自己身体，谁又会心疼你呢？）
 
 - 堵漏（身体有病治病，无病则改正不良习惯，比如熬夜，放纵）
