feat: 删除dubbo，删除没用到的依赖

--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -14,11 +14,13 @@ permalink: /pages/b04951/
 
 🚀 升级Spring Cloud版本到2025.1.0
 
+🚀 升级Spring Security版本到7.0.0
+
 ###### 迁移
 
 🚀 Jackson2迁移至Jackson3
 
-🚀 Dubbo替换掉为gRpc【不便于SpringBoot4版本升级】
+🚀 Dubbo替换掉为gRPC
 
 #### 3.5.4更新日志
 
