--- a/README.adoc
+++ b/README.adoc
@@ -37,7 +37,7 @@ image:https://gitee.com/laokouyun/KCloud-Platform-IoT/badge/fork.svg?theme=dark[
 image:https://gitcode.com/qq_39893313/KCloud-Platform-IoT/star/badge.svg?theme=dark[GitCode star,link=https://gitcode.com/qq_39893313/KCloud-Platform-IoT]
 
 image:https://img.shields.io/static/v1?label=Spring%20Framework&message=7.0.0&color=green[Spring Framework,link=https://spring.io/projects/spring-framework]
-image:https://img.shields.io/static/v1?label=Spring%20Security&message=7.0.0&color=blue[Spring Security,link=https://spring.io/projects/spring-security]
+image:https://img.shields.io/static/v1?label=Spring%20Security&message=7.0.0&color=green[Spring Security,link=https://spring.io/projects/spring-security]
 image:https://img.shields.io/static/v1?label=Spring%20Boot&message=4.0.0&color=green[Spring Boot,link=https://spring.io/projects/spring-boot]
 image:https://img.shields.io/static/v1?label=Spring%20Cloud&message=2025.1.0&color=green[Spring Cloud,link=https://spring.io/projects/spring-cloud]
 image:https://img.shields.io/static/v1?label=Spring%20Cloud%20Alibaba&message=2025.0.0.0&color=orange[Spring Cloud Alibaba,link=https://github.com/alibaba/spring-cloud-alibaba]
@@ -161,7 +161,7 @@ image::doc/image/老寇IoT云平台业务架构图.png[架构图,align=center]
 |Nacos                       |3.1.0
 |gRPC                        |1.76.0
 |Redis                       |8.0.1
-|Elasticsearch               |9.2.0
+|Elasticsearch               |9.2.1
 |Netty                       |4.2.7.Final
 |Kafka                       |4.0.0
 |Pulsar                      |4.0.5
