--- a/README.adoc
+++ b/README.adoc
@@ -324,6 +324,10 @@ https://v.douyin.com/7tquJphUnAI[抖音视频-老寇IoT云平台开源三周年]
 
 https://www.bilibili.com/video/BV1KPdxYaESL[哔哩哔哩视频-老寇IoT云平台开源三周年]
 
+=== 🎁 荣誉称号
+
+image::doc/image/gitcode.jpg[2025年GitCode百大开源项目]
+
 === 🐼 鸣谢个人
 
 [width=100%]
