--- a/archive/docs/01.指南/03.快速上手/04.更新日志.md
+++ b/archive/docs/01.指南/03.快速上手/04.更新日志.md
@@ -12,9 +12,13 @@ permalink: /pages/b04951/
 
 🚀 升级Spring Boot版本到4.0.0
 
-🚀 升级Spring Cloud版本到2025.1.0
+🚀 升级Spring Framework版本到7.0.0
 
 🚀 升级Spring Security版本到7.0.0
+
+🚀 升级Spring Data版本到2025.1.0
+
+🚀 升级Spring Cloud版本到2025.1.0
 
 🚀 升级Elasticsearch至9.2.1
 
