--- a/README.adoc
+++ b/README.adoc
@@ -155,6 +155,7 @@ image::doc/image/老寇IoT云平台业务架构图.png[架构图,align=center]
 |Spring Boot                 |4.0.0
 |Spring Framework            |7.0.0
 |Spring Security             |7.0.0
+|Spring gRPC                 |1.0.0
 |Spring Data                 |2025.1.0
 |Spring Cloud                |2025.1.0
 |Spring Cloud Alibaba        |2025.0.0.0
