--- a/archive/docs/01.指南/02.常用命令/00.Linux常用命令.md
+++ b/archive/docs/01.指南/02.常用命令/00.Linux常用命令.md
@@ -1,12 +1,12 @@
 ---
-title: Centos7常用命令
+title: Linux常用命令
 date: 2024-1-12 11:37:20
 permalink: /pages/76bfa2/
 ---
 
 你好呀，我的老朋友！我是老寇，欢迎来到老寇云平台！
 
-话不多说，跟我学习Centos7常用命令！
+话不多说，跟我学习Linux常用命令！
 
 #### 目录和文件
 
@@ -57,13 +57,16 @@ vi 目录 => vi 1.txt
 echo 内容 >> 文件 => echo '111' >> 1.txt
 
 # 输出文件尾部内容
-tail -n 行数 文件 => tail -n 1000 1.txt
+tail -n 行数 文件 => tail -n 1000 1.txt => tail -n 1000 1.txt
 
 # 查看文件
-find /-name 文件 => find /-name 1.txt
+find /-name 文件 => find /-name 1.txt => find /-name 1.txt
 
 # 查看Linux发行版本
 cat /etc/os-release
+
+# 文件拷贝到远程
+scp 文件 远程主机:目录 => scp 1.txt root@192.168.1.1:/opt/data
 ```
 
 #### 网络
@@ -71,6 +74,17 @@ cat /etc/os-release
 ```shell
 # 重启网络
 service network restart
+systemctl restart network.service
+# 查看IP地址
+ip addr show
+ifconfig
+```
+
+#### 远程连接
+
+```shell
+# 登录远程
+ssh 用户名@主机名 => ssh root@192.168.1.1
 ```
 
 #### 防火墙
