--- a/archive/docs/01.指南/02.常用命令/01.Docker常用命令.md
+++ b/archive/docs/01.指南/02.常用命令/01.Docker常用命令.md
@@ -35,9 +35,6 @@ docker --help
 # 查看镜像
 docker images
 
-# 启动镜像
-docker run -d -p 对外端口:容器端口 镜像名称 => docker run -d -p 6379:6379 redis
-
 # 查看日志
 docker logs 容器id => docker logs xz2wxdf
 
@@ -79,6 +76,23 @@ docker volume inspect 卷名 => docker volume inspect /data
 
 # 构建镜像
 dokcer build -t 镜像名称:标签 . => docker build -t jdk:21 .
+
+# 创建网络
+# 子网分配最大IP数量=2^(32-子网掩码位数)-2
+# 可分配IP数量=子网范围数量-网关IP
+docker network create --driver bridge --subnet 子网IP --ip-range IP网段 --gateway 网关IP 网络名称  => docker network create --driver bridge --subnet 192.168.0.0/16 --ip-range 192.168.0.0/24 --gateway 192.168.0.1 mynet
+
+# 运行容器
+docker run -d -p 对外端口:容器端口 --network 网络名称 --name 容器名称 镜像名称 => docker run -d -p 6379:6379 --network mynet --name myredis redis:7.0.1
+
+# 容器连接新网络
+docker network connect 网络名称 容器名称/容器id => docker network connect mynet myredis
+
+# 容器关闭网络连接
+docker network disconnect 网络名称 容器名称/容器id => docker network disconnect mynet myredis
+
+# 查看容器IP地址
+docker exec 容器名称/容器id --hostname -i => docker exec -it myredis --hostname -i
 ```
 
 #### docker-compose
